--- a/biome.json
+++ b/biome.json
@@ -37,6 +37,9 @@
       },
       "a11y": {
         "noSvgWithoutTitle": "off"
+      },
+      "suspicious": {
+        "noArrayIndexKey": "off"
       }
     }
   },
