--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@vercel/functions": "^1.4.2",
     "clsx": "^2.1.1",
     "create-stylelint": "^0.5.0",
-    "framer-motion": "^11.11.9",
     "fs": "^0.0.2",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
     "lucide": "^0.452.0",
     "lucide-react": "^0.452.0",
+    "motion": "^12.0.3",
     "next": "14.2.15",
     "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
