--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run lint && next build",
+    "build": "pnpm run lint && next build",
     "start": "next start",
-    "lint:biome": "npx biome check --fix --unsafe .",
-    "lint:prettier": "npx prettier . --write --log-level warn",
-    "lint": "npm run lint:prettier && npm run lint:biome",
+    "lint": "eslint . --fix",
+    "lint:check": "eslint .",
     "knip": "knip"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.15",
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
@@ -33,15 +33,16 @@
     "unified": "^11.0.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.3",
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@stylistic/eslint-plugin": "^2.11.0",
     "@types/node": "^22.7.8",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "eslint": "^9.16.0",
     "knip": "^5.62.0",
     "postcss": "^8.4.47",
     "postcss-nested": "^6.2.0",
-    "prettier": "3.3.3",
     "stylelint": "^16.10.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-standard": "^36.0.1",
